Fix build, fix auto-update

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "xtux-src-20030306.tar.bz2": e3768d7504bc67191b55b09c1240e2934aa1db7b
+  xtux-src-20030306.tar.gz: 8db4f42c382ccf52eae7077e9e834f5bc00c54bf
